--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -19,15 +19,10 @@
     Em relação à essa época, \citeauthor{boy}(\citeyear{boy}) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
     com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
     Ou seja, a ação de medir era dada, matematicamente, de forma empírica não havendo o famoso rigor matemático que conhecemos hoje.
-    
-	\begin{comment}
-		    As aplicações mais teóricas de medida vieram com os estudos de Newton que trataram sobre taxa de variação de quantidades continuamente variáveis tais como
-		comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva \cite{boy}. 
-		Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\displaystyle \int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann.
-	\end{comment} 
-    
+   
     \enquote{
-    	Pelo fim do século dezenove, a ênfase no rigor levou numerosos matemáticos à produção de exemplos de funções 'patológicas' que, devido a alguma propriedade incomum, violavam um teorema que antes se supunha válido em geral} \cite[p.415]{boy}.
+    	Pelo fim do século dezenove, a ênfase no rigor levou numerosos matemáticos à produção de exemplos de funções 'patológicas' que, devido a alguma propriedade incomum, violavam um teorema que antes se supunha válido em geral
+    } \cite[p.415]{boy}.
     Isso gerou um grande movimento matemático, no século XX, que tinha como objetivo trazer um rigor unificado à matemática.
     Foi nesse movimento que o matemático francês Henri Lebesgue (1875-1941) notou aplicações limitadas da integral de Riemann através do seguinte pensamento:
     
@@ -101,10 +96,10 @@
   	\end{citlon}
   	
   	Como fora supracitado, pode-se atribuir vários procedimentos técnicos à pesquisas exploratórias. 
-  	O nosso procedimento técnico foi realizado por meio de uma pesquisa bibliográfica devido ser elaborada com base em material já publicado \cite{gil}.
+  	O nosso procedimento técnico foi realizado por meio de uma pesquisa bibliográfica pois foi elaborada com base em material já publicado \cite{gil}.
   	
   	Por fim, sugerimos como pode ser apresentada a teoria da medida e da integração de Lebesgue para alunos de graduação em ciências exatas.
-  	Utilizando a ordem com que os conteúdos foram desenvolvidos e organizados neste trabalho, bem como o uso de ilustrações dele.
+  	Utilizando a ordem com que os conteúdos foram desenvolvidos e organizados neste trabalho, bem como o uso das ilustrações nele presentes.
     
     
     
